fix overlay overflow on about, experimenting light theme

--- a/aacfuw-website/src/components/layout.module.scss
+++ b/aacfuw-website/src/components/layout.module.scss
@@ -1,6 +1,6 @@
-body {
-  background-color: rgba(0, 0, 0, 0.83);
-}
+// body {
+//   background-color: rgba(0, 0, 0, 0.83);
+// }
 
 .stickyFooter {
   flex-grow: 1;
