--- a/aacfuw-website/src/styles/index.module.scss
+++ b/aacfuw-website/src/styles/index.module.scss
@@ -38,14 +38,14 @@ body {
 .bigText {
     font-size: 100px;
     // change font color to white
-    color: rgb(255, 255, 255);
+    // color: rgb(255, 255, 255);
     font-family: 'Kaushan Script';
 }
 
 .mediumText {
     font-size: 60px;
     // change font color to white
-    color: rgb(255, 255, 255);
+    // color: rgb(255, 255, 255);
     font-family: 'Kaushan Script'
 }
 
@@ -53,7 +53,7 @@ body {
     font-size: 30px;
     // change font color to white
     line-height: 0.1;
-    color: rgb(255, 255, 255);
+    // color: rgb(255, 255, 255);
     font-family: 'Have Heart One';
 }
 
